Gap and border corrections

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
   --container-primary: 1110px;
   --container-secondary: 540px;
 
-  --gap-lg: 43px;
+  --gap-lg: 40px;
   --gap-md: 20px;
   --gap-sm: 10px;
 }
@@ -73,7 +73,7 @@ a {
 .nav-bar__list {
   display: flex;
   flex-wrap: wrap;
-  gap: var(--gap-lg);
+  gap: 43px;
   line-height: 1.2;
 }
 
@@ -142,7 +142,9 @@ a {
 .secondary-content__video iframe {
   width: 100%;
   height: auto;
+  max-height: 600px;
   aspect-ratio: 16/9;
+  border: 0;
 }
 
 /* Projects */
@@ -186,7 +188,7 @@ a {
 
 .footer {
   background-color: var(--color-primary);
-  padding-top: 50px;
+  padding-top: 47px;
   padding-bottom: 54px;
 }
 .footer__author-title {
@@ -194,7 +196,7 @@ a {
   font-size: 21px;
   font-weight: 500;
   line-height: 1.3;
-  margin-bottom: 10px;
+  margin-bottom: var(gap);
 }
 
 .footer__copyright-info {
